<resources>
    <string name="app_name">LastBite</string>
    <string name="order_preparing">Your order is being prepared…</string>
    <string name="received">I received it</string>
    <string name="for_you_description">Scroll horizontally to see some places specially displayed for you where you may order some food.</string>
    <string name="stores">Scroll horizontally to see other stores where you may order some food.</string>
    <string name="nearby_places">Scroll horizontally to see other nearby places where you may order some food.</string>
    <string name="home_icon">It is the home icon that takes you to the main page of the app.</string>
    <string name="cart_icon">It is the cart icon that takes you to the screen where you may see which products you have added to it.</string>
    <string name="restaurant_logo">It is the restaurant logo of the last order made.</string>
    <string name="for_you">For you</string>
    <string name="stores_">Stores</string>
    <string name="nearby_p">Nearby places</string>
    <string name="order_restaurant">This has to be replaced by the associated restaurant.</string>
    <string name="back_button">It takes you to the previous page you were.</string>
    <string name="go_checkout">Go to Checkout</string>
    <string name="my_cart">My Cart</string>
    <string name="exit_checkout_icon">With this, you may exit the checkout screen.</string>
    <string name="checkout_screen">Welcome to the Checkout screen.</string>
    <string name="checkout_title">Checkout</string>
    <string name="delivery_text">Delivery</string>
    <string name="in_store_pickup_text">In-Store Pickup</string>
    <string name="payment_text">Payment</string>
    <string name="third_party_text">Third-party</string>
    <string name="total_cost_checkout_text">Total Cost</string>
    <string name="money_sign">$</string>
    <string name="total_cost_checkout_value">19.69</string>
    <string name="terms_conditions_advise">Are you ready to place your order?</string>
    <string name="checkout_confirmation">Confirm Checkout</string>
    <string name="add_unit_cart_item">This increases the amount of units you want to buy from the specific product.</string>
    <string name="cart_item_eliminator">This eliminates the food item from your cart.</string>
    <string name="food_item_cart_image">This is the image of the food item you are interested.</string>
    <string name="food_item_cart_quantity">1</string>
    <string name="food_item_name">Organic Bananas</string>
    <string name="food_item_tag">2pcs</string>
    <string name="remove_food_item_icon">This removes the associated food item from your cart.</string>
    <string name="food_item_shop_layout">This is the layout of a food item in the shop.</string>
    <string name="add_food_item_to_cart">This adds a food item to your cart.</string>
    <string name="food_item_shop_image">This is the image of the food item you are interested.</string>
    <string name="food_title">Food</string>
    <string name="product_detail">Product Detail</string>
    <string name="detailed_product_text">Apples are nutritious. Apples may be good for weight loss. Apples may be good for your heart as they are part of a healthy and varied diet.</string>
    <string name="tags_title">Tags</string>
    <string name="review_title">Review</string>
    <string name="product_review">4.8</string>
    <string name="home_icon_title">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>