<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeIcon"
        android:title="@string/home_icon_title"
        android:layout_width="61dp"
        android:layout_height="58dp"
        android:contentDescription="@string/home_icon"
        android:icon="@drawable/home_icon" />

    <item
        android:id="@+id/cartIcon"
        android:layout_width="61dp"
        android:layout_height="58dp"
        android:contentDescription="@string/cart_icon"
        android:icon="@drawable/shopping_cart_icon"
        android:title="@string/my_cart"/>

    <item
        android:id="@+id/navigationIcon"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="Account" />
</menu>