<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutCFoodItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/foodItemImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/food_item_cart_image"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <Space
                android:layout_width="123dp"
                android:layout_height="24dp" />

            <TextView
                android:id="@+id/foodItemText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/food_item_name"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/foodItemTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/food_item_tag"
                android:textSize="11sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/removeFromCartButton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/remove_food_item_icon"
                    app:srcCompat="@drawable/remove_white_icon" />

                <TextView
                    android:id="@+id/foodItemQuantityText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:text="@string/food_item_cart_quantity" />

                <ImageButton
                    android:id="@+id/addToCartButton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/add_unit_cart_item"
                    app:srcCompat="@drawable/add_white_icon" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="0"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/closeFoodItemCartIcon"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:contentDescription="@string/cart_item_eliminator"
                app:srcCompat="@drawable/delete_icon" />

            <Space
                android:id="@+id/spacingCloseAndPriceFoodItemCart"
                android:layout_width="64dp"
                android:layout_height="50dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/paymentValueText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/$"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/costText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_cost_checkout_value"
                    android:textColor="@color/black" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>