<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutCFoodItemImage"
            android:layout_width="match_parent"
            android:layout_height="328dp"
            android:background="#D4D5D5">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="186dp"
                android:layout_height="186dp"
                android:contentDescription="@string/food_item_shop_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.584"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageButton
                android:id="@+id/backArrowButton2"
                android:layout_width="83dp"
                android:layout_height="83dp"
                android:contentDescription="@string/back_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/back_arrow_icon" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/foodItemTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="3dp"
            android:text="@string/food_item_name"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tagFoodItemDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/food_item_tag" />

        <LinearLayout
            android:id="@+id/LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/removeFromCartButton2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:contentDescription="@string/remove_food_item_icon"
                app:srcCompat="@drawable/remove_white_icon" />

            <TextView
                android:id="@+id/foodItemQuantityText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/food_item_cart_quantity" />

            <ImageButton
                android:id="@+id/addToCartButton2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:contentDescription="@string/add_unit_cart_item"
                app:srcCompat="@drawable/add_white_icon" />

            <Space
                android:layout_width="148dp"
                android:layout_height="52dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/paymentValueText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/money_sign"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/costText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:text="@string/total_cost_checkout_value"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

        <View
            android:id="@+id/divider7"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/productDetailTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="3dp"
            android:text="@string/product_detail"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detailedProductText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/detailed_product_text" />

        <View
            android:id="@+id/divider8"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/productTagTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/tags_title"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="237dp"
                android:layout_height="48dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/productTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:background="@color/gray_background"
                android:text="@string/food_item_tag"
                android:textSize="14sp" />

            <Space
                android:layout_width="38dp"
                android:layout_height="35dp"
                android:layout_weight="1" />

        </LinearLayout>

        <View
            android:id="@+id/divider9"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/productReviewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:text="@string/review_title"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="211dp"
                android:layout_height="47dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/productReviewText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:text="@string/product_review"
                android:textSize="14sp" />

            <Space
                android:layout_width="38dp"
                android:layout_height="35dp"
                android:layout_weight="1" />
        </LinearLayout>

        <View
            android:id="@+id/divider12"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="407dp"
        android:layout_height="179dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonCheckout2"
            android:layout_width="315dp"
            android:layout_height="70dp"
            android:backgroundTint="@color/principal_green"
            android:text="@string/go_checkout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>