<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#D5D6D6">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/checkout_screen"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layoutLConcepts"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutCCheckoutTitle"
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <TextView
                    android:id="@+id/titleCheckout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/checkout_title"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/closeCheckoutButton"
                    app:layout_constraintHorizontal_bias="0.166"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.508" />

                <ImageButton
                    android:id="@+id/closeCheckoutButton"
                    android:layout_width="55dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/exit_checkout_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/delete_icon" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutCDeliveryCheckout"
                android:layout_width="match_parent"
                android:layout_height="91dp">

                <TextView
                    android:id="@+id/deliveryCheckoutText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delivery_text"
                    app:emojiCompatEnabled="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/inStorePickupText"
                    app:layout_constraintHorizontal_bias="0.191"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/inStorePickupText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="28dp"
                    android:text="@string/in_store_pickup_text"
                    android:textColor="@color/gray_lettering"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutCPaymentCheckout"
                android:layout_width="match_parent"
                android:layout_height="91dp">

                <TextView
                    android:id="@+id/paymentCheckoutText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/payment_text"
                    app:emojiCompatEnabled="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/externalPaymentText"
                    app:layout_constraintHorizontal_bias="0.181"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/externalPaymentText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:text="@string/third_party_text"
                    android:textColor="@color/gray_lettering"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutCTotalCheckout"
                android:layout_width="match_parent"
                android:layout_height="91dp">

                <TextView
                    android:id="@+id/totalCheckoutText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="44dp"
                    android:text="@string/total_cost_checkout_text"
                    app:emojiCompatEnabled="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/paymentValueText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="200dp"
                    android:text="@string/money_sign"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/totalCheckoutText"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/costText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_cost_checkout_value"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.345"
                    app:layout_constraintStart_toEndOf="@+id/paymentValueText"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutCTNCText"
                android:layout_width="match_parent"
                android:layout_height="91dp">

                <TextView
                    android:id="@+id/externalPaymentText3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/terms_conditions_advise"
                    android:textColor="@color/gray_lettering"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.253"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutCCheckoutConfirmation"
            android:layout_width="match_parent"
            android:layout_height="119dp">

            <Button
                android:id="@+id/confirmCheckout"
                android:layout_width="315dp"
                android:layout_height="70dp"
                android:backgroundTint="@color/principal_green"
                android:text="@string/checkout_confirmation"
                android:textColor="@color/gray_background"
                android:textColorLink="@color/principal_green"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>